Increased the padding right distance by 5px which fixes the issue of the UI jumping sometimes because the image full screen icon was overlapping the scrollbar.

--- a/frontend/css/streamlit.main.css
+++ b/frontend/css/streamlit.main.css
@@ -168,7 +168,7 @@ div.gallery:hover {
 }
 .css-ret2ud{
 	padding-left: 10px;
-	padding-right: 25px;
+	padding-right: 30px;
 	gap: initial;
 	display: initial;
 }
